--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -33,5 +33,6 @@
   <body dir="rtl">
     <%- include('../partials/header.ejs')%> <%-
     include('../partials/errorMessage.ejs')%> <%- body %>
+    <script src="https://cdn.enable.co.il/licenses/enable-L14919yvompajw9u-1022-36559/init.js"></script>
   </body>
 </html>
