--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
     <ul class="main-nav">
       <li><a href="https://thebigtaste.herokuapp.com/">בית</a></li>
       <li><a href="https://thebigtaste.herokuapp.com/recipes">מתכונים</a></li>
-      <li><a href="facebook.com">פייסבוק</a></li>
+      <li><a href="https://facebook.com">פייסבוק</a></li>
       <li><a href="#contact">צרו קשר</a></li>
     </ul>
   </nav>
