--- a/public/css/style.css
+++ b/public/css/style.css
@@ -119,6 +119,7 @@ h1:hover {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
 }
 
 .search-bar-form input {
