--- a/views/partials/recipeGrid.ejs
+++ b/views/partials/recipeGrid.ejs
@@ -10,5 +10,7 @@
     />
   </a>
   <% }) %>
-  <a class="for-more" href="<%= type %>">עוד>></a>
+  <span class="for-more-span"
+    ><a class="for-more" href="<%= type %>">עוד>></a></span
+  >
 </div>
