--- a/public/css/style.css
+++ b/public/css/style.css
@@ -79,6 +79,7 @@ h1:hover {
   background-image: url(bg-intro.jpg);
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-direction: column;
   padding-top: 0;
 }
