--- a/public/css/style.css
+++ b/public/css/style.css
@@ -348,7 +348,7 @@ footer {
   }
 
   h2 {
-    font-size: 47px;
+    font-size: 40px;
   }
 
   .search-bar-form input {
@@ -404,5 +404,10 @@ footer {
   .divider:after {
     content: "";
     flex: 1;
+  }
+
+  .recipe-title-main-page {
+    font-size: 20px;
+    padding-bottom: 5px;
   }
 }
