--- a/public/css/style.css
+++ b/public/css/style.css
@@ -410,4 +410,12 @@ footer {
     font-size: 20px;
     padding-bottom: 5px;
   }
+
+  li {
+    padding-left: 10px;
+  }
+
+  .contact-text {
+    font-size: 19px;
+  }
 }
