--- a/views/partials/intro.ejs
+++ b/views/partials/intro.ejs
@@ -4,7 +4,7 @@
   <h1>הטעם הגדול</h1>
   <div class="intro-text">
     <Span class="intro-text-first"
-      ><span class="hello">שלום לכולם/ן!</span> אני לירז</Span
+      ><span class="hello">שלום לכולם/ן!</span> אני לירז דוד</Span
     >
     <br />
     <span
