--- a/views/recipes/index.ejs
+++ b/views/recipes/index.ejs
@@ -1,27 +1,40 @@
 <% const tags = [' חלבי', ' בשרי', ' פרווה', ' צמחוני', ' טבעוני', ' ללא גלוטן']
 %>
 <h2>חפש מתכון</h2>
-<form action="/recipes" method="GET">
-  <div>
-    <label>כותרת</label>
-    <input type="text" name="title" value="<%= searchOptions.title %>" />
-  </div>
-  <div>
-    <label>תגיות</label>
-    <select name="tags">
-      <% tags.forEach(t => { %> <% if (t === searchOptions.tags) { %>
-      <option selected label="<%= t %>" value="<%= t %>"></option>
-      <% } else { %>
-      <option value="<%= t %>"><%= t %></option>
-      <% } %> <% }) %>
-    </select>
-  </div>
-  <button type="submit">חיפוש</button>
-</form>
+<div class="search-bar">
+  <form class="search-bar-form search-form" action="/recipes" method="GET">
+    <div>
+      <input
+        class="w3-input"
+        type="text"
+        name="title"
+        placeholder="חיפוש מתכונים..."
+      />
+    </div>
+    <div class="tags">
+      <select name="tags">
+        <% tags.forEach(t => { %> <% if (t === searchOptions.tags) { %>
+        <option selected label="<%= t %>" value="<%= t %>"></option>
+        <% } else { %>
+        <option value="<%= t %>"><%= t %></option>
+        <% } %> <% }) %>
+      </select>
+    </div>
+    <button class="button-76 btn-1" type="submit"><span>חיפוש</span></button>
+  </form>
+</div>
 <div>
-  <% recipes.forEach(recipe => { %>
-  <a href="/recipes/<%= recipe.id %>"
-    ><img height="150" width="100" src="<%= recipe.posterImagePath %>" />
-  </a>
-  <% }) %>
+  <div class="img-row">
+    <% recipes.forEach(recipe => { %>
+    <a class="item-in-row" href="/recipes/<%= recipe.id %>">
+      <div class="recipe-title-main-page"><%= recipe.title %></div>
+      <img
+        class="main-page-img"
+        src="<%= recipe.posterImagePath %>"
+        height="200"
+        width="200"
+      />
+    </a>
+    <% }) %>
+  </div>
 </div>
