--- a/public/css/style.css
+++ b/public/css/style.css
@@ -100,7 +100,7 @@ h1:hover {
 
 .intro-text-first {
   font-weight: bold;
-  font-size: 20px;
+  font-size: 23px;
 }
 
 .appetite {
@@ -338,6 +338,34 @@ footer {
   color: white;
   width: 100%;
   height: auto;
+}
+
+.search-form {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.btn-1.button-76,
+.tags select {
+  height: 50px;
+  width: 150px;
+  margin: 0;
+  padding: 0;
+}
+
+.recipe-details {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  font-weight: bold;
+  font-size: 17px;
+}
+
+.recipe-details img {
+  border-radius: 50%;
 }
 
 @media (max-width: 1024px) {
