--- a/public/css/style.css
+++ b/public/css/style.css
@@ -419,6 +419,10 @@ footer {
     margin-right: 0;
   }
 
+  .button-76.btn-1 {
+    height: 70px;
+  }
+
   img.main-page-img {
     height: 300px;
     width: 300px;
