--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -32,7 +32,8 @@
   </head>
   <body dir="rtl">
     <%- include('../partials/header.ejs')%> <%-
-    include('../partials/errorMessage.ejs')%> <%- body %>
+    include('../partials/errorMessage.ejs')%> <%- body %> <%-
+    include('../partials/footer.ejs')%>
     <script src="https://cdn.enable.co.il/licenses/enable-L14919yvompajw9u-1022-36559/init.js"></script>
   </body>
 </html>
