--- a/views/recipes/_form_fields.ejs
+++ b/views/recipes/_form_fields.ejs
@@ -11,11 +11,11 @@
 </div>
 <div>
     <label>זמן הכנה: </label>
-    <input type="number" name="prepTime" min="1" value="<%= recipe.prepTime %>" required>    
+    <input type="text" name="prepTime" min="1" value="<%= recipe.prepTime %>" required>    
 </div>
 <div>
     <label>זמן בישול: </label>
-    <input type="number" name="cookTime" min="1" value="<%= recipe.cookTime %>" required>    
+    <input type="text" name="cookTime" min="1" value="<%= recipe.cookTime %>" required>    
 </div>
 <div>
     <label>רכיבים: </label>
