--- a/views/recipes/show.ejs
+++ b/views/recipes/show.ejs
@@ -8,5 +8,5 @@
   <div>רכיבים: <%= recipe.ingredients %></div>
   <div>אופן הכנה: <%= recipe.directions %></div>
   <!-- <a href="/recipes/<%= recipe.id %>/edit">Edit</a> -->
-  <%- include('../partials/deleteForm', { url: `/recipes/${recipe.id}`}) %>
+  <!-- <%- include('../partials/deleteForm', { url: `/recipes/${recipe.id}`}) %> -->
 </span>
