--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,9 +1,9 @@
 <header class="header">
-  <a href="https://thebigtaste.herokuapp.com/"><img src="/img/logo.png" /></a>
+  <a href="https://thebigtaste.onrender.com/"><img src="/img/logo.png" /></a>
   <nav>
     <ul class="main-nav">
-      <li><a href="https://thebigtaste.herokuapp.com/">בית</a></li>
-      <li><a href="https://thebigtaste.herokuapp.com/recipes">מתכונים</a></li>
+      <li><a href="https://thebigtaste.onrender.com/">בית</a></li>
+      <li><a href="https://thebigtaste.onrender.com/recipes">מתכונים</a></li>
       <li><a href="https://facebook.com">פייסבוק</a></li>
       <li><a href="#contact">צרו קשר</a></li>
     </ul>
